RESOLVED FIXED83449
combine two arrays in FileException.cpp into one
https://bugs.webkit.org/show_bug.cgi?id=83449
Summary combine two arrays in FileException.cpp into one
Lu Guanqun
Reported 2012-04-08 21:10:08 PDT
combine two arrays in FileException.cpp into one, this helps to fix one FIXME in the file.
Attachments
Patch (5.74 KB, patch)
2012-04-08 21:12 PDT, Lu Guanqun
no flags
Lu Guanqun
Comment 1 2012-04-08 21:12:10 PDT
WebKit Review Bot
Comment 2 2012-04-09 22:45:43 PDT
Comment on attachment 136177 [details] Patch Clearing flags on attachment: 136177 Committed r113683: <http://trac.webkit.org/changeset/113683>
WebKit Review Bot
Comment 3 2012-04-09 22:45:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.